--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,7 @@
 .App {
   text-align: center;
   background-color: #282c34;
-}
-
-.date {
-  justify-content: center;
-  margin-bottom: 40px;
-  color: #bdbfc1;
+  padding-bottom: 20px;
 }
 
 .taskForm {
